Fixed spelling mistakes in the manual.

--- a/HelpFile/FarmMonitor.html
+++ b/HelpFile/FarmMonitor.html
@@ -29,7 +29,7 @@ selected host.
 <i>NOTE: As you can see from the version number this is still very much a work
 in progress. I have some key features I'd like to add, such as aggregations,
 and so it's probable that a breaking change will still occur before reaching a v1.0
-release. I'll try and maintain the existing file format but can't guarentee it.</i>
+release. I'll try and maintain the existing file format but can't guarantee it.</i>
 </p>
 
 <a name="Background"></a>
@@ -115,7 +115,7 @@ as a command-line where the selected host name will be substituted for the
 mstsc /f /v ${HOSTNAME}
 </pre><p>
 Out-of-the-box there are a couple of default tools configured: one to open a
-full-scren remote desktop via the <code>MSTSC</code> tool, and another to
+full-screen remote desktop via the <code>MSTSC</code> tool, and another to
 continuously <code>PING</code> the host, which is useful when restarting it.
 </p>
 
@@ -154,7 +154,7 @@ prompted for once and then cached indefinitely.
 <p>
 From the "View | Queries..." dialog you can manage the queries that are
 executed against every host marked for monitoring. You can add, copy, update or
-remove quries along with re-ordering them. Double-clicking the title is another
+remove queries along with re-ordering them. Double-clicking the title is another
 way of launching the editor for the selected query.
 </p><p>
 When creating or editing a query the following fields are used to define it:
@@ -298,7 +298,7 @@ Email: <a href="mailto://gort@cix.co.uk">gort@cix.co.uk</a><br>
 Web: <a href="http://www.chrisoldwood.com">www.chrisoldwood.com</a><br>
 </p><p>
 Chris Oldwood<br>
-24th March 2016<br>
+29th March 2016<br>
 </p>
 
 </body>
